syntax = "proto3";
package DomainServices.CaseService;
option csharp_namespace = "DomainServices.CaseService.Contracts";

import "NullableGrpcDate.proto";
import "ModificationStamp.proto";
import "Identity.proto";
import "google/protobuf/wrappers.proto";

message CaseModel {
	int64 CaseId =  1;
	cis.types.Identity Customer = 2;
	int32 UserId = 3;
	int32 State = 4;
	string FirstNameNaturalPerson = 5;
	string Name = 6;
	cis.types.NullableGrpcDate DateOfBirthNaturalPerson = 7;
	bool ActionRequired = 8;
	string ContractNumber = 9;
	cis.types.ModificationStamp Created = 10;
	int32 ProductInstanceType = 11;
	google.protobuf.Int32Value TargetAmount = 12;
}
